# GameEngine

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  q  unit_test.bat
.cache/clangd/index/: 3DSConverter.cpp.308501A325999701.idx  3DSConverter.cpp.864475EE0725B519.idx  3DSExporter.cpp.9A6AA20EEE97D71A.idx  3DSExporter.cpp.9FA16ED721B7ED9F.idx  3DSExporter.h.047BD516C233E0F6.idx  3DSExporter.h.2133D9C72B20BCEB.idx  3DSHelper.h.18AE270145C7F3C9.idx  3DSHelper.h.A036080169E5B87D.idx  3DSLoader.cpp.5A17C92B3F4A7DCB.idx  3DSLoader.cpp.D6F75A6C05F74C91.idx  3DSLoader.h.83815EBE99BAC32A.idx  3DSLoader.h.CDF009C8DFF3B316.idx  3MFTypes.h.630AEE4F16D0A15E.idx  3MFTypes.h.8A7D1805D4B361BF.idx  3MFXmlTags.h.1A079FE424C8FBD5.idx  3MFXmlTags.h.66297A661562EB97.idx  ACLoader.cpp.5B846E3C7FA2632C.idx  ACLoader.cpp.5E7F558485FFBF1E.idx  ACLoader.h.910A41CFF5BF2A3D.idx  ACLoader.h.FBE50624D16D60EB.idx  AMFImporter.cpp.A8EFE1BE9AD3308A.idx  AMFImporter.cpp.DED3FBBE2D741C1B.idx  AMFImporter.hpp.01C8B9174564A37B.idx  AMFImporter.hpp.B4A298EE0CC1C814.idx  AMFImporter_Geometry.cpp.186A49C8E9F96893.idx  AMFImporter_Geometry.cpp.3446223B1E465019.idx  AMFImporter_Material.cpp.0266F838D1A054E7.idx  AMFImporter_Material.cpp.8FD17CE1F2423DF0.idx  AMFImporter_Node.hpp.3796B0C045615D1E.idx  AMFImporter_Node.hpp.F12BD39D48D6182A.idx  AMFImporter_Postprocess.cpp.7D7549882AFD87E8.idx  AMFImporter_Postprocess.cpp.F886E97926987CC8.idx  ASELoader.cpp.407305F49A7EE5B5.idx  ASELoader.cpp.B020A0D309821EFF.idx  ASELoader.h.263B8A08EA5D6612.idx  ASELoader.h.C8BB8EB40817ABFA.idx  ASEParser.cpp.0A08FE1C8DFAB896.idx  ASEParser.cpp.435E006A80A51B6A.idx  ASEParser.h.0B73A1D531B04F65.idx  ASEParser.h.7A07B72E68F99243.idx  (+2257 more)
Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp
Engine/Core/: CMakeLists.txt
Engine/Core/include/: Application.hpp  GlfwInput.hpp  GlfwWindow.hpp  Input.hpp  Layer.hpp  LayerStack.hpp  Log.hpp  Window.hpp
Engine/Core/src/: Application.cpp  CMakeLists.txt  EntryPoint.hpp  GlfwInput.cpp  GlfwWindow.cpp  Layer.cpp  LayerStack.cpp  Log.cpp
Engine/Core/test/: CMakeLists.txt  Formula-test.cpp
Engine/Entity/include/: AssetData.hpp  AssetManager.hpp  Component.hpp  Entity.hpp  EntityManager.hpp  ModelComponent.hpp  ModelData.hpp  ShaderComponent.hpp  ShaderData.hpp  TextureComponent.hpp  TextureData.hpp  TransformComponent.hpp
Engine/Entity/src/: CMakeLists.txt  ModelComponent.cpp  ModelData.cpp  ShaderComponent.cpp  ShaderData.cpp  TextureComponent.cpp  TextureData.cpp  TransformComponent.cpp
Engine/Events/include/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Engine/Events/src/: CMakeLists.txt  KeyEvent.cpp  MouseEvent.cpp
Engine/Physics/include/: Particle.hpp
Engine/Physics/src/: CMakeLists.txt  Particle.cpp  physics.cpp
Engine/Rendering/: CMakeLists.txt
Engine/Rendering/Common/include/: Camera.hpp  Light.hpp  Rendering.hpp
Engine/Rendering/Common/src/: CMakeLists.txt  Camera.cpp  Light.cpp
Engine/Rendering/OpenGL/include/: OpenGLMesh.hpp  OpenGLProgram.hpp  OpenGLRenderer.hpp  OpenGLTexture.hpp  OpenGLVertex.hpp
Engine/Rendering/OpenGL/src/: CMakeLists.txt  OpenGLRenderer.cpp
Engine/Rendering/Vulkan/include/: VulkanBuffer.hpp  VulkanCommandBuffer.hpp  VulkanDescriptorSet.hpp  VulkanDevice.hpp  VulkanGraphicsPipeline.hpp  VulkanImage.hpp  VulkanRenderer.hpp  VulkanVertex.hpp
Engine/Rendering/Vulkan/src/: CMakeLists.txt  VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanDescriptorSet.cpp  VulkanDevice.cpp  VulkanGraphicsPipeline.cpp  VulkanImage.cpp  VulkanRenderer.cpp  VulkanSwapChain.cpp
Engine/Rendering/include/: Buffer.hpp  Rendering.hpp  Shader.hpp  VertexArray.hpp  VulkanBaseVertex.hpp  VulkanBuffer.hpp  VulkanBuffer.tpp  VulkanBuffer_refac.hpp  VulkanCamera.hpp  VulkanCommandBuffer.hpp  VulkanData.hpp  VulkanDebugMessenger.hpp  VulkanDescriptorSet.hpp  VulkanDevice.hpp  VulkanFrameBuffer.hpp  VulkanGraphicsPipeline.hpp  VulkanImage.hpp  VulkanInstance.hpp  VulkanLight.hpp  VulkanRenderPass.hpp  VulkanRenderer.hpp  VulkanRendering.hpp  VulkanShader.hpp  VulkanSwapChain.hpp  VulkanSyncObject.hpp  VulkanVertex.hpp
Engine/Rendering/src/: CMakeLists.txt  VertexArray.cpp  VulaknRenderer.cpp  VulkanBuffer.cpp  VulkanBuffer_refac.cpp  VulkanCamera.cpp  VulkanCommandBuffer.cpp  VulkanDebugMessenger.cpp  VulkanDescriptorSet.cpp  VulkanDevice.cpp  VulkanFrameBuffer.cpp  VulkanGraphicsPipeline.cpp  VulkanImage.cpp  VulkanInstance.cpp  VulkanLight.cpp  VulkanRenderPass.cpp  VulkanRenderer.cpp  VulkanRendering.cpp  VulkanShader.cpp  VulkanSwapChain.cpp  VulkanSyncObject.cpp
Engine/UI/include/: ImGuiLayer.hpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_vulkan.h
Engine/UI/src/: CMakeLists.txt  ImGuiLayer.cpp  imgui_impl_glfw.cpp
Engine/Utils/include/: Log.hpp
Engine/Utils/src/: CMakeLists.txt
EngineEditor/: CMakeLists.txt
EngineEditor/UI/include/: ImGuiLayer.hpp  UI.hpp  imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h
EngineEditor/UI/src/: CMakeLists.txt  ImGuiLayer.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
ParticleSandBox/: CMakeLists.txt  ParticleSandBox.cpp
SandBox/: CMakeLists.txt  SandBox.cpp
SandBoxRefac/: CMakeLists.txt  SandBoxRefac.cpp
buid/: CMakeCache.txt  Makefile  cmake_install.cmake
buid/Engine/: Makefile  cmake_install.cmake
buid/Engine/Core/: Makefile  cmake_install.cmake
buid/Engine/Core/src/: Makefile  cmake_install.cmake
resources/models/: bunny.mtl
resources/models/Cactus/: Cactus2.fbx  Cactus3.fbx
resources/shaders/: compile.bat  compile.sh  compile_mac.sh  frag.frag  frag.spv  frag_opengl.frag  frag_pbr.frag  frag_pbr410.frag  frag_pbr450.frag  frag_pbr450.spv  frag_vulkan_pbr.frag  frag_vulkan_pbr.spv  particlecompute.comp  vert.spv  vert.vert  vert_opengl.vert  vert_pbr.vert  vert_pbr410.vert  vert_pbr450.spv  vert_pbr450.vert  vert_vulkan_pbr.spv  vert_vulkan_pbr.vert
test/: CMakeLists.txt  Formula-test.cpp
